--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container">
+  <div class="logo-wrapper container">
     <img src="assets/img/logo.png" alt="Logo Gaiotto" class="logo" />
   </div>
   <nav class="nav-links container" id="menu-apartamentos">
