--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="scroll-animate">
   <div class="logo-wrapper container">
     <img src="assets/img/logo.png" alt="Logo Gaiotto" class="logo" />
   </div>
