--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,7 @@ header {
   display: flex;
   justify-content: center;
   gap: 1rem;
-  margin-top: 0.5rem;
-}
+  margin: 1rem 0;
 
 .social-icons .icon {
   width: 1.75rem;
