--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,15 +123,20 @@ header {
 .map,
 .contact {
   max-width: 900px;
-  margin: 2rem auto;
+  margin: 1rem auto;
 }
 
 .details {
   position: relative;
-  padding: 2rem;
+  padding: 0 1rem;
+  box-sizing: border-box;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin: 1rem;
 }
 
 .map,
@@ -250,8 +255,8 @@ iframe {
 }
 
 .whatsapp-btn img {
-  width: 1.4rem;
-  height: 1.4rem;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 
 .whatsapp-btn:hover {
@@ -260,7 +265,7 @@ iframe {
 
 .whatsapp-fixed {
   position: fixed;
-  bottom: 20px;
+  bottom: 80px;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
@@ -278,12 +283,12 @@ iframe {
 
   .map,
   .contact {
-    padding: 0 1rem;
+    padding: 0rem;
   }
 
   .whatsapp-btn {
-    font-size: 1rem;
-    padding: 0.8rem 1.5rem;
+    font-size: 1.1rem;
+    padding: 1.5rem 1.5rem;
   }
 
   .details-grid {
@@ -376,7 +381,7 @@ iframe {
 .gallery {
   max-width: 900px;
   margin: 2rem auto;
-  padding: 0 1rem;
+  padding: 0rem;
 }
 
 .gallery h2 {
@@ -485,7 +490,12 @@ iframe {
   color: #ffd43b;
 }
 .badge-block {
-  margin-bottom: 1rem;
+  width: 100%;
+  max-width: 100%;
+  background: rgba(255, 255, 255, 0.03); /* opcional para dar visual uniforme */
+  padding: 0.5rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
 .badge-block h3 {
@@ -511,7 +521,9 @@ iframe {
   align-items: center;
   justify-content: center;
   height: 2.2rem;
-  line-height: 1;  white-space: nowrap;
+  line-height: 1;  
+  white-space: normal;
+  word-break: break-word;
   box-shadow: 0 1px 3px rgba(0,0,0,0.2);
   vertical-align: middle;
 }
@@ -521,5 +533,15 @@ iframe {
   color: #ffd43b;
   font-weight: 500;
   margin-top: 1rem;
-  padding-inline: 5rem;
+  padding: 0.7rem 1rem;
+  text-align: center;
+  display: inline-block;
+  max-width: 100%;
+  box-sizing: border-box;
+  word-break: break-word;
+  margin-left: auto;
+  margin-right: auto;
+}
+.badge-block + .badge-block {
+  margin-top: 2rem; /* ou o valor que desejar */
 }
