--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,12 +123,12 @@ header {
 .map,
 .contact {
   max-width: 900px;
-  margin: 1rem auto;
+  margin: 0rem auto;
 }
 
 .details {
   position: relative;
-  padding: 0 1rem;
+  padding: 1rem;
   box-sizing: border-box;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
@@ -136,7 +136,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  margin: 1rem;
+  margin: 0 auto;
 }
 
 .map,
@@ -303,10 +303,10 @@ iframe {
 }
 
 .container {
-  padding-left: 1rem;
-  padding-right: 1rem;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 0 auto; /* centraliza horizontalmente */
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 .img-modal {
@@ -406,6 +406,9 @@ iframe {
   .mosaic-grid {
     column-count: 1;
   }
+  .badge-block {
+    padding: 1rem 1rem;
+  }
 }
 
 .mosaic-img {
@@ -493,9 +496,10 @@ iframe {
   width: 100%;
   max-width: 100%;
   background: rgba(255, 255, 255, 0.03); /* opcional para dar visual uniforme */
-  padding: 0.5rem;
+  padding: 1rem 1.5rem;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
 }
 
 .badge-block h3 {
@@ -506,6 +510,8 @@ iframe {
 }
 
 .badges {
+  justify-content: center;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 0.7rem;
@@ -529,6 +535,8 @@ iframe {
 }
 
 .badge.destaque {
+  flex-basis: 100%;
+  justify-content: center;
   background: rgba(255, 212, 59, 0.1);
   color: #ffd43b;
   font-weight: 500;
