--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,8 +243,8 @@ iframe {
   align-items: center;
   gap: 0.5rem;
   width: fit-content;
-  margin: 2rem auto;
-  padding: 1rem 2rem;
+  margin: 1rem auto;
+  padding: 0.5rem 0.5rem;
   background: var(--primary);
   color: var(--accent);
   text-decoration: none;
@@ -265,7 +265,7 @@ iframe {
 
 .whatsapp-fixed {
   position: fixed;
-  bottom: 80px;
+  bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
@@ -288,7 +288,7 @@ iframe {
 
   .whatsapp-btn {
     font-size: 1.1rem;
-    padding: 1.5rem 1.5rem;
+    padding: 0.5rem 0.5rem;
   }
 
   .details-grid {
@@ -299,6 +299,10 @@ iframe {
 @media (max-width: 480px) {
   .details-grid {
     grid-template-columns: 1fr;
+  }
+   .whatsapp-btn {
+    font-size: 1.1rem;
+    padding: 0.5rem 0.5rem;
   }
 }
 
