--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,9 +432,7 @@ iframe {
 .scroll-animate {
   opacity: 0;
   transform: translateY(30px);
-  transition:
-    opacity 0.6s ease,
-    transform 0.6s ease;
+  transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
 .scroll-animate.visible {
@@ -567,16 +565,16 @@ html {
 
 .site-footer {
   position: relative;
-  background: var(--bg);
+  background: linear-gradient(to top, var(--bg), #00263e);
   text-align: center;
-  padding: 2rem 1rem 6rem;
-  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
+  padding: 1rem 1rem 1rem;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .footer-divider {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-  max-width: 900px;
-  margin: 0 auto 2rem;
+  max-width: 100%;
+  margin: 0 auto;
 }
 .footer-logo-wrapper {
   display: inline-block;
@@ -590,7 +588,6 @@ html {
 .footer-logo-wrapper .logo {
   max-width: 80px;
 }
-}
 
 .footer-logo {
   width: 60px;
@@ -598,10 +595,9 @@ html {
   margin-bottom: 1rem;
 }
 .site-footer .social-icons {
-  margin: 1rem 0;
-  padding: 1rem 0;
+  margin: 0.4rem 0;
+  padding: 0.4rem 0;
 }
-
 
 .site-footer .social-icons .icon {
   width: 1.5rem;
@@ -610,7 +606,7 @@ html {
 .back-to-top {
   position: absolute;
   right: 1rem;
-  bottom: 1rem;
+  bottom: 5rem;
   background: var(--primary);
   color: var(--accent);
   border: none;
@@ -620,5 +616,47 @@ html {
 }
 
 .footer-space {
-  height: 120px;
+  height: 100px;
+}
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.social-vertical {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.social-vertical a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-vertical .icon {
+  width: 1.75rem;
+  height: 1.75rem;
+  color: var(--accent);
+  transition: transform 0.3s;
+}
+
+.social-vertical a:hover .icon {
+  transform: scale(1.1);
+}
+
+@media (max-width: 600px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .back-to-top {
+    position: static;
+    margin-top: 1rem;
+  }
 }
