--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,9 +420,13 @@ iframe {
   margin-bottom: 10px;
   border-radius: 8px;
   display: block;
-  transition: transform 0.2s ease-in-out;
+  transition: opacity 0.8s ease-out;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+.mosaic-img.loaded {
+  opacity: 1;
 }
 
 .mosaic-img:hover {
@@ -431,8 +435,8 @@ iframe {
 
 .scroll-animate {
   opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.6s ease, transform 0.6s ease;
+  transform: translateY(50px);
+  transition: opacity 0.4s ease-out, transform 0.4s ease-out;
 }
 
 .scroll-animate.visible {
